--- a/src/main/webapp/users/List.xhtml
+++ b/src/main/webapp/users/List.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateUsersTitle}"></h:outputText>
+            <h:outputText value="#{bundle.ProjectTitle}"></h:outputText>
         </ui:define>
         <ui:define name="body">
 
